--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   http: ^1.4.0
   shared_preferences: ^2.5.3
   badges: ^3.1.2
+  carousel_slider: ^5.1.1
+  dotted_border: ^2.0.0+2
+  file_picker: ^10.2.0
 
 dev_dependencies:
   flutter_test:
